# stm32f7-template

./: .gitignore  CMakeLists.txt  README.md  logging_config.cmake
src/: config.h  main.c
src/logging/: logging.c  logging.h
src/stm/: .mxproject  stm.ioc
src/stm/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
src/stm/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
